disc style testing v2.0 clipping

--- a/disctest.html
+++ b/disctest.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags-->
     <meta charset="UTF-8" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
     <meta name="description" content="Kenzie" />
@@ -17,12 +17,14 @@
 
     <!-- CSS-->
     <link href="css/disc.css" rel="stylesheet" media="all" />
-  </head>
+</head>
 
-  <body>
-    <div class="pole"></div>
-    <div class="disc" onclick="this.classList.toggle('move')">
-      <div class="poletop"></div>
+<body>
+    <div class="polegroup">
+        <div class="disc" onclick="this.classList.toggle('move')">
+            <div class="bottom"></div>
+        </div>
+        <div class="pole"></div>
     </div>
-  </body>
+</body>
 </html>
