added tower elements to html and added very fancy ring css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
   </head>
 
   <body>
-    <!-- Your html here -->
+    <!-- Gameplay Section -->
+    <section class="tower-game">
+      <div class="tower">
+        <div class="ring" ringsize=4><div class="bottom"></div></div>
+        <div class="ring" ringsize=3><div class="bottom"></div></div>
+        <div class="ring" ringsize=2><div class="bottom"></div></div>
+        <div class="ring" ringsize=1><div class="bottom"></div></div>
+        <div class="pole"></div>
+      </div>
+      <div class="tower">
+        <div class="pole"></div>
+      </div>
+      <div class="tower goal">
+        <div class="pole"></div>
+      </div>
+    </section>
+
+    <!-- Popup Info Section -->
+    <section class="info-popup"></section>
     <script src="code.js"></script>
   </body>
 </html>
