click buffering system

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <p>Move all of the rings to the third pole.</p>
         <h3>Rules:</h3>
         <ol>
-          <li>Only one disk can be moved at a time.</li>
-          <li>No disk may be placed on top of a smaller disk.</li>
+          <li>Only one ring can be moved at a time.</li>
+          <li>No ring may be placed on top of a smaller ring.</li>
         </ol>
         <button>Play</button>
       </div>
